[gd_scene load_steps=8 format=2]

[ext_resource path="res://Test/Scripts/Hex.gd" type="Script" id=1]
[ext_resource path="res://HUD/ToolTip.tscn" type="PackedScene" id=2]
[ext_resource path="res://Test/Scripts/Building.gd" type="Script" id=3]
[ext_resource path="res://Test/Scripts/Feature.gd" type="Script" id=4]
[ext_resource path="res://Buildings/LabPlaceholder.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null, ExtResource( 5 ) ],
"loop": true,
"name": "Types",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Hex" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
ToolTip = ExtResource( 2 )

[node name="BorderHex" type="Polygon2D" parent="."]

[node name="DrawHex" type="Polygon2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionHex" type="CollisionPolygon2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="TooltipTimer" type="Timer" parent="."]
one_shot = true

[node name="Building" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="BuildingSprite" type="AnimatedSprite" parent="Building"]
frames = SubResource( 1 )
animation = "Types"

[node name="Feature" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Feature"]
frames = SubResource( 2 )
[connection signal="mouse_entered" from="." to="." method="_on_Hex_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Hex_mouse_exited"]
[connection signal="timeout" from="TooltipTimer" to="." method="_on_TooltipTimer_timeout"]
